--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ description: Please see the README on GitHub at <https://github.com/aaronhipple/
 
 dependencies:
   - base >= 4.7 && < 5
-  - containers >= 0.6 && < 1
+  - containers
 
 library:
   source-dirs: src
