--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,8 @@ extra-source-files:
 # common to point users to the README.md file.
 description: Please see the README on GitHub at <https://github.com/aaronhipple/advent-of-code#readme>
 
+default-extensions: []
+
 dependencies:
   - base >= 4.7 && < 5
   - containers
